objects/DMAPP__Align_Search__c.object
<CustomObject>
    <description>Capture the details when a search phrase is entered in the Smart Map Browser screen or when a user clicks on a map from the Category /sub-category listing</description>
    <fields>
        <fullName>DMAPP__Any_Map_Viewed__c</fullName>
        <formula>MIN(DMAPP__Maps_Viewed__c , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Any Map Viewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Any_Solution_Viewed__c</fullName>
        <formula>MIN( DMAPP__Solutions_Viewed__c , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Any Solution Viewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Maps_Viewed__c</fullName>
        <label>Maps Viewed</label>
        <summaryFilterItems>
            <field>DMAPP__Align_Search_Usage__c.DMAPP__Type__c</field>
            <operation>equals</operation>
            <value>Map</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DMAPP__Align_Search_Usage__c.DMAPP__Used__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>DMAPP__Align_Search_Usage__c.DMAPP__Align_Search__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Number_Of_Maps_Returned__c</fullName>
        <label>Number Of Maps Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Number_Of_Solutions_Returned__c</fullName>
        <label>Number Of Solutions Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Phrase__c</fullName>
        <description>Search Phrase</description>
        <inlineHelpText>Search Phrase</inlineHelpText>
        <label>Phrase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Search_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Solutions_Viewed__c</fullName>
        <label>Solutions Viewed</label>
        <summaryFilterItems>
            <field>DMAPP__Align_Search_Usage__c.DMAPP__Type__c</field>
            <operation>equals</operation>
            <value>Solution</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>DMAPP__Align_Search_Usage__c.DMAPP__Used__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>DMAPP__Align_Search_Usage__c.DMAPP__Align_Search__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Source__c</fullName>
        <description>Browser tab or Create From</description>
        <inlineHelpText>Browser tab or Create From</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Browser tab</fullName>
                </value>
                <value>
                    <fullName>Create from</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>Browse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Align Search</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Align Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Align Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>